--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 numpy = "*"
 torch = "*"
+matplotlib = "*"
+microwhist = {file = ".", editable = true}
 
 [dev-packages]
 black = "*"
