added pandas/pyarrow, removed notebooks from git control, added dataset building script

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ numpy = "*"
 torch = "*"
 matplotlib = "*"
 microwhist = {file = ".", editable = true}
+pyarrow = "*"
+pandas = "*"
 
 [dev-packages]
 black = "*"
